[package]
name = "snarkvm"
version = "0.9.10"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [
  "compilers",
  "cryptography",
  "mathematics",
  "wasm",
  "web-programming"
]
include = [ "Cargo.toml", "vm", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"

[workspace]
members = [
  "algorithms",
  "circuit",
  "circuit/account",
  "circuit/algorithms",
  "circuit/collections",
  "circuit/environment",
  "circuit/environment/witness",
  "circuit/network",
  "circuit/program",
  "circuit/types",
  "circuit/types/address",
  "circuit/types/boolean",
  "circuit/types/field",
  "circuit/types/group",
  "circuit/types/integers",
  "circuit/types/scalar",
  "circuit/types/string",
  "console",
  "console/account",
  "console/algorithms",
  "console/collections",
  "console/network",
  "console/network/environment",
  "console/program",
  "console/types",
  "console/types/address",
  "console/types/boolean",
  "console/types/field",
  "console/types/group",
  "console/types/integers",
  "console/types/scalar",
  "console/types/string",
  "curves",
  "fields",
  "parameters",
  "r1cs",
  "synthesizer",
  "utilities",
  "utilities/derives",
  "wasm"
]

[lib]
path = "vm/lib.rs"

[[bin]]
name = "snarkvm"
path = "vm/cli/main.rs"
required-features = [ "cli" ]

[features]
default = [
  "circuit",
  "console",
  "synthesizer",
  "cli",
  "parallel",
  "parameters"
]
full = [
  "algorithms",
  "circuit",
  "console",
  "curves",
  "fields",
  "parameters",
  "r1cs",
  "synthesizer",
  "utilities"
]
cli = [
  "anyhow",
  "clap",
  "colored",
  "rand",
  "self_update",
  "serde_json",
  "thiserror"
]
aleo-cli = [ "snarkvm-synthesizer/aleo-cli" ]
cuda = [ "snarkvm-algorithms/cuda", "snarkvm-synthesizer/cuda" ]
parameters_no_std_out = [ "snarkvm-parameters/no_std_out" ]
parallel = [
  "rayon",
  "snarkvm-algorithms/parallel",
  "snarkvm-fields/parallel",
  "snarkvm-synthesizer/parallel",
  "snarkvm-utilities/parallel"
]
noconfig = [ ]
algorithms = [ "snarkvm-algorithms" ]
circuit = [ "snarkvm-circuit" ]
console = [ "snarkvm-console" ]
curves = [ "snarkvm-curves" ]
fields = [ "snarkvm-fields" ]
parameters = [ "snarkvm-parameters" ]
r1cs = [ "snarkvm-r1cs" ]
synthesizer = [ "snarkvm-synthesizer" ]
utilities = [ "snarkvm-utilities" ]
wasm = [ "snarkvm-wasm" ]

[dependencies.snarkvm-algorithms]
path = "./algorithms"
version = "0.9.10"
optional = true
default-features = false

[dependencies.snarkvm-circuit]
path = "./circuit"
version = "0.9.10"
optional = true

[dependencies.snarkvm-console]
path = "./console"
version = "0.9.10"
optional = true

[dependencies.snarkvm-curves]
path = "./curves"
version = "0.9.10"
optional = true

[dependencies.snarkvm-fields]
path = "./fields"
version = "0.9.10"
optional = true

[dependencies.snarkvm-parameters]
path = "./parameters"
version = "0.9.10"
optional = true

[dependencies.snarkvm-r1cs]
path = "./r1cs"
version = "0.9.10"
optional = true

[dependencies.snarkvm-synthesizer]
path = "./synthesizer"
version = "0.9.10"
default-features = false
optional = true

[dependencies.snarkvm-utilities]
path = "./utilities"
version = "0.9.10"
optional = true

[dependencies.snarkvm-wasm]
path = "./wasm"
version = "0.9.10"
optional = true

[dependencies.anyhow]
version = "1.0.66"
optional = true

[dependencies.clap]
version = "3.2"
features = [ "derive" ]
optional = true

[dependencies.colored]
version = "2"
optional = true

[dependencies.indexmap]
version = "1.8"
features = [ "rayon" ]

[dependencies.once_cell]
version = "1.13"

[dependencies.parking_lot]
version = "0.12"

[dependencies.rand]
version = "0.8"
optional = true

[dependencies.rayon]
version = "1"
optional = true

[dependencies.self_update]
version = "0.32"
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.thiserror]
version = "1.0"
optional = true

[dependencies.ureq]
version = "2.5"
features = [ "json" ]

[dev-dependencies.bincode]
version = "1.3"

[dev-dependencies.rusty-hook]
version = "0.11.2"

[dev-dependencies.tempfile]
version = "3.3"

[build-dependencies.walkdir]
version = "2"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 3
lto = "thin"
incremental = true

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug = true
debug-assertions = true
