[package]
name = "snarkvm"
version = "0.12.6"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [
  "compilers",
  "cryptography",
  "mathematics",
  "wasm",
  "web-programming"
]
include = [ "Cargo.toml", "vm", "README.md", "LICENSE.md" ]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.66"

[workspace]
members = [
  "algorithms",
  "algorithms/cuda",
  "circuit",
  "circuit/account",
  "circuit/algorithms",
  "circuit/collections",
  "circuit/environment",
  "circuit/environment/witness",
  "circuit/network",
  "circuit/program",
  "circuit/types",
  "circuit/types/address",
  "circuit/types/boolean",
  "circuit/types/field",
  "circuit/types/group",
  "circuit/types/integers",
  "circuit/types/scalar",
  "circuit/types/string",
  "console",
  "console/account",
  "console/algorithms",
  "console/collections",
  "console/network",
  "console/network/environment",
  "console/program",
  "console/types",
  "console/types/address",
  "console/types/boolean",
  "console/types/field",
  "console/types/group",
  "console/types/integers",
  "console/types/scalar",
  "console/types/string",
  "curves",
  "fields",
  "ledger",
  "ledger/block",
  "parameters",
  "synthesizer",
  "synthesizer/coinbase",
  "synthesizer/program",
  "synthesizer/snark",
  "utilities",
  "utilities/derives",
  "wasm"
]

[lib]
path = "vm/lib.rs"

[[bin]]
name = "snarkvm"
path = "vm/cli/main.rs"
required-features = [ "cli" ]

[features]
default = [
  "circuit",
  "console",
  "ledger",
  "parameters",
  "synthesizer",
  "utilities",
  "cli"
]
full = [
  "algorithms",
  "circuit",
  "console",
  "curves",
  "fields",
  "ledger",
  "parameters",
  "synthesizer",
  "utilities"
]
cli = [
  "anyhow",
  "clap",
  "colored",
  "rand",
  "self_update",
  "serde_json",
  "thiserror"
]
aleo-cli = [ "snarkvm-synthesizer/aleo-cli" ]
cuda = [ "snarkvm-algorithms/cuda", "snarkvm-synthesizer/cuda" ]
parameters_no_std_out = [ "snarkvm-parameters/no_std_out" ]
noconfig = [ ]
algorithms = [ "snarkvm-algorithms" ]
circuit = [ "snarkvm-circuit" ]
console = [ "snarkvm-console" ]
curves = [ "snarkvm-curves" ]
fields = [ "snarkvm-fields" ]
ledger = [ "snarkvm-ledger" ]
parameters = [ "snarkvm-parameters" ]
rocks = [ "snarkvm-synthesizer/rocks" ]
synthesizer = [ "snarkvm-synthesizer" ]
timer = [ "snarkvm-ledger/timer" ]
utilities = [ "snarkvm-utilities" ]
wasm = [ "snarkvm-wasm" ]
ed25519 = [ "snarkvm-console/ed25519" ]

[dependencies.snarkvm-algorithms]
path = "./algorithms"
version = "=0.12.6"
optional = true

[dependencies.snarkvm-circuit]
path = "./circuit"
version = "=0.12.6"
optional = true

[dependencies.snarkvm-console]
path = "./console"
version = "=0.12.6"
optional = true

[dependencies.snarkvm-curves]
path = "./curves"
version = "=0.12.6"
optional = true

[dependencies.snarkvm-fields]
path = "./fields"
version = "=0.12.6"
optional = true

[dependencies.snarkvm-ledger]
path = "./ledger"
version = "=0.12.6"
optional = true

[dependencies.snarkvm-parameters]
path = "./parameters"
version = "=0.12.6"
optional = true

[dependencies.snarkvm-synthesizer]
path = "./synthesizer"
version = "=0.12.6"
default-features = false
optional = true

[dependencies.snarkvm-utilities]
path = "./utilities"
version = "=0.12.6"
optional = true

[dependencies.snarkvm-wasm]
path = "./wasm"
version = "=0.12.6"
optional = true

[dependencies.anstyle]
version = "1"

[dependencies.anyhow]
version = "1.0.71"
optional = true

[dependencies.clap]
version = "4.3"
features = [ "derive", "color", "unstable-styles" ]
optional = true

[dependencies.colored]
version = "2"
optional = true

[dependencies.indexmap]
version = "2.0"
features = [ "rayon" ]

[dependencies.num-format]
version = "0.4.4"

[dependencies.once_cell]
version = "1.18"

[dependencies.parking_lot]
version = "0.12"

[dependencies.rand]
version = "0.8"
optional = true

[dependencies.rayon]
version = "1"

[dependencies.self_update]
version = "0.37"
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true
features = [ "preserve_order" ]

[dependencies.thiserror]
version = "1.0"
optional = true

[dependencies.ureq]
version = "2.7"
features = [ "json" ]

[dev-dependencies.bincode]
version = "1.3"

[dev-dependencies.rusty-hook]
version = "0.11.2"

[dev-dependencies.tempfile]
version = "3.6"

[build-dependencies.walkdir]
version = "2"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 3
lto = "thin"
incremental = true

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug = true
debug-assertions = true
