[package]
name = "snarkvm-integration"
version = "0.7.5"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Integration testing for DPC"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "operating-systems" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.snarkvm-algorithms]
path = "../algorithms"
version = "0.7.5"

[dependencies.snarkvm-curves]
path = "../curves"
version = "0.7.5"

[dependencies.snarkvm-dpc]
path = "../dpc"
version = "0.7.5"

[dependencies.snarkvm-fields]
path = "../fields"
version = "0.7.5"

[dependencies.snarkvm-ledger]
path = "../ledger"
version = "0.7.5"

[dependencies.snarkvm-profiler]
path = "../profiler"
version = "0.7.5"

[dependencies.snarkvm-r1cs]
path = "../r1cs"
version = "0.7.5"

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.7.5"
default-features = false

[dependencies.anyhow]
version = "1.0.44"

[dependencies.base58]
version = "0.2"

[dependencies.bech32]
version = "0.8"

[dependencies.bincode]
version = "1.3.1"

[dependencies.blake2]
version = "0.9"

[dependencies.derivative]
version = "2"

[dependencies.hex]
version = "0.4.3"

[dependencies.itertools]
version = "0.10.1"

[dependencies.parking_lot]
version = "0.11.2"

[dependencies.rand]
version = "0.8"

[dependencies.rand_chacha]
version = "0.3"

[dependencies.thiserror]
version = "1.0"

[features]
print-trace = [ "snarkvm-profiler/print-trace" ]
