[package]
name = "snarkvm-integration"
version = "0.7.5"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Integration testing for DPC"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "compilers", "cryptography", "mathematics", "wasm", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"

[dependencies.snarkvm-algorithms]
path = "../algorithms"
version = "0.7.5"

[dependencies.snarkvm-curves]
path = "../curves"
version = "0.7.5"

[dependencies.snarkvm-dpc]
path = "../dpc"
version = "0.7.5"

[dependencies.snarkvm-fields]
path = "../fields"
version = "0.7.5"

[dependencies.snarkvm-r1cs]
path = "../r1cs"
version = "0.7.5"

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.7.5"
default-features = false

[dependencies.aleo-std]
version = "0.1.12"
optional = true

[dependencies.anyhow]
version = "1.0.55"

[dependencies.base58]
version = "0.2"

[dependencies.bech32]
version = "0.8"

[dependencies.bincode]
version = "1.3.1"

[dependencies.blake2]
version = "0.10"

[dependencies.derivative]
version = "2"

[dependencies.hex]
version = "0.4.3"

[dependencies.itertools]
version = "0.10.3"

[dependencies.parking_lot]
version = "0.11.2"

[dependencies.rand]
version = "0.8"

[dependencies.rand_chacha]
version = "0.3"

[dependencies.thiserror]
version = "1.0"

[dependencies.time]
version = "0.3.7"

[features]
default = [ ]
profiler = [ "aleo-std/profiler" ]
