[package]
name = "snarkvm-integration"
version = "0.7.5"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Integration testing for DPC"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "compilers", "cryptography", "mathematics", "wasm", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"

[dependencies.snarkvm-dpc]
path = "../dpc"
version = "0.7.5"

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.7.5"
default-features = false

[dependencies.aleo-std]
version = "0.1.14"
optional = true

[dependencies.rand]
version = "0.8"

[dependencies.rand_chacha]
version = "0.3"

[dependencies.time]
version = "0.3.9"

[features]
default = [ ]
profiler = [ "aleo-std/profiler" ]
