[package]
name = "snarkvm-algorithms"
version = "0.9.10"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Algorithms for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [
  "compilers",
  "cryptography",
  "mathematics",
  "wasm",
  "web-programming"
]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"

[[bench]]
name = "variable_base"
path = "benches/msm/variable_base.rs"
harness = false

[[bench]]
name = "poseidon_sponge"
path = "benches/crypto_hash/poseidon.rs"
harness = false

[[bench]]
name = "fft"
path = "benches/fft/fft.rs"
harness = false

[[bench]]
name = "marlin"
path = "benches/snark/marlin.rs"
harness = false

[dependencies.snarkvm-curves]
path = "../curves"
version = "0.9.10"
default-features = false

[dependencies.snarkvm-fields]
path = "../fields"
version = "0.9.10"
default-features = false

[dependencies.snarkvm-parameters]
path = "../parameters"
version = "0.9.10"
optional = true
default-features = false

[dependencies.snarkvm-r1cs]
path = "../r1cs"
version = "0.9.10"
default-features = false

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.9.10"
default-features = false

[dependencies.snarkvm-cuda]
path = "./cuda"
version = "0.9.8"
optional = true
default-features = false

[dependencies.aleo-std]
version = "0.1.15"
default-features = false

[dependencies.anyhow]
version = "1.0"

[dependencies.crossbeam-channel]
version = "0.5"
optional = true

[dependencies.hashbrown]
version = "0.13.1"

[dependencies.hex]
version = "0.4"

[dependencies.itertools]
version = "0.10.3"

[dependencies.lazy_static]
version = "1.4"
optional = true

[dependencies.parking_lot]
version = "0.12"

[dependencies.rand]
version = "0.8"

[dependencies.rand_core]
version = "0.6"
default-features = false
optional = true

[dependencies.rand_chacha]
version = "0.3"
default-features = false

[dependencies.rayon]
version = "1"
optional = true

[dependencies.rust-gpu-tools]
version = "0.6.0"
optional = true

[dependencies.serde]
version = "1.0"
default-features = false
features = [ "derive" ]

[dependencies.sha2]
version = "0.10"
default-features = false

[dependencies.smallvec]
version = "1.10"
default-features = false
features = [ "const_generics", "const_new" ]

[dependencies.thiserror]
version = "1.0"

[dependencies.wasm-bindgen-futures]
version = "0.4"
optional = true

[dev-dependencies.expect-test]
version = "1.1.0"

[dev-dependencies.bincode]
version = "1"

[dev-dependencies.criterion]
version = "0.4.0"

[dev-dependencies.serde_json]
version = "1"

[dev-dependencies.serial_test]
version = "0.9"

[features]
default = [
  "full",
  "parallel",
  "snarkvm-curves/default",
  "snarkvm-fields/default",
  "snarkvm-r1cs/default",
  "snarkvm-utilities/default"
]
full = [ "crypto_hash", "fft", "msm", "polycommit_full", "snark" ]
wasm = [
  "crypto_hash",
  "fft",
  "msm",
  "polycommit_wasm",
  "snark",
  "wasm-bindgen-futures"
]
cuda = [ "snarkvm-cuda" ]
parallel = [
  "rayon",
  "snarkvm-fields/parallel",
  "snarkvm-utilities/parallel"
]
profiler = [ "aleo-std/profiler" ]
crypto_hash = [ ]
fft = [ ]
msm = [ ]
polycommit = [ "crypto_hash", "fft", "msm", "rand_core" ]
polycommit_wasm = [ "polycommit", "snarkvm-parameters/wasm" ]
polycommit_full = [ "polycommit", "snarkvm-parameters/default" ]
snark = [ "crypto_hash", "fft", "msm", "polycommit" ]
