[package]
name = "snarkvm-algorithms"
version = "0.14.6"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Algorithms for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [
  "compilers",
  "cryptography",
  "mathematics",
  "wasm",
  "web-programming"
]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "Apache-2.0"
edition = "2021"

[[bench]]
name = "variable_base"
path = "benches/msm/variable_base.rs"
harness = false

[[bench]]
name = "poseidon_sponge"
path = "benches/crypto_hash/poseidon.rs"
harness = false

[[bench]]
name = "fft"
path = "benches/fft/fft.rs"
harness = false
bench = false

[[bench]]
name = "marlin"
path = "benches/snark/marlin.rs"
harness = false

[dependencies.snarkvm-curves]
path = "../curves"
version = "=0.14.6"
default-features = false

[dependencies.snarkvm-fields]
path = "../fields"
version = "=0.14.6"
default-features = false

[dependencies.snarkvm-parameters]
path = "../parameters"
version = "=0.14.6"
optional = true

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "=0.14.6"
default-features = false

[dependencies.snarkvm-algorithms-cuda]
path = "./cuda"
version = "=0.14.6"
optional = true

[dependencies.aleo-std]
version = "0.1.18"
default-features = false

[dependencies.anyhow]
version = "1.0"

[dependencies.blake2]
version = "0.10"
default-features = true

[dependencies.cfg-if]
version = "1.0.0"
optional = true

[dependencies.crossbeam-channel]
version = "0.5"
optional = true

[dependencies.fxhash]
version = "0.2.1"
optional = true

[dependencies.hashbrown]
version = "0.14.0"

[dependencies.hex]
version = "0.4"

[dependencies.indexmap]
version = "2.0.0"
optional = true

[dependencies.itertools]
version = "0.11.0"

[dependencies.lazy_static]
version = "1.4"
optional = true

[dependencies.parking_lot]
version = "0.12"

[dependencies.rand]
version = "0.8"

[dependencies.rand_core]
version = "0.6"
default-features = false
optional = true

[dependencies.rand_chacha]
version = "0.3"
default-features = false

[dependencies.rayon]
version = "1"

[dependencies.rust-gpu-tools]
version = "0.7.0"
optional = true

[dependencies.serde]
version = "1.0"
default-features = false
features = [ "derive" ]

[dependencies.sha2]
version = "0.10"
default-features = false

[dependencies.smallvec]
version = "1.11"
default-features = false
features = [ "const_generics", "const_new" ]

[dependencies.thiserror]
version = "1.0"

[dependencies.wasm-bindgen-futures]
version = "0.4"
optional = true

[dev-dependencies.expect-test]
version = "1.4.1"

[dev-dependencies.bincode]
version = "1"

[dev-dependencies.criterion]
version = "0.5.1"

[dev-dependencies.serde_json]
version = "1"
features = [ "preserve_order" ]

[dev-dependencies.serial_test]
version = "2.0"

[features]
default = [
  "full",
  "snarkvm-curves/default",
  "snarkvm-fields/default",
  "snarkvm-utilities/default"
]
full = [
  "crypto_hash",
  "fft",
  "msm",
  "polycommit_full",
  "r1cs",
  "snark"
]
wasm = [
  "crypto_hash",
  "fft",
  "msm",
  "polycommit_wasm",
  "r1cs",
  "snark",
  "wasm-bindgen-futures"
]
cuda = [ "snarkvm-algorithms-cuda" ]
profiler = [ "aleo-std/profiler" ]
crypto_hash = [ ]
fft = [ ]
msm = [ ]
polycommit = [ "crypto_hash", "fft", "msm", "rand_core" ]
polycommit_wasm = [ "polycommit", "snarkvm-parameters/wasm" ]
polycommit_full = [ "polycommit", "snarkvm-parameters/default" ]
r1cs = [ "cfg-if", "fxhash", "indexmap" ]
serial = [
  "snarkvm-curves/serial",
  "snarkvm-fields/serial",
  "snarkvm-utilities/serial"
]
snark = [ "crypto_hash", "fft", "msm", "polycommit", "r1cs" ]
