[package]
name = "snarkvm-barebones"
version = "0.7.5"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Algorithms for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "compilers", "cryptography", "mathematics", "wasm", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"

[dependencies.circuit]
package = "snarkvm-circuit"
path = "../circuit"
version = "0.7.5"

[dependencies.console]
package = "snarkvm-console"
path = "../console"
version = "0.7.5"

[dependencies.snarkvm-fields]
path = "../fields"
version = "0.7.5"

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.7.5"
default-features = false

[dependencies.anyhow]
version = "1.0.57"

[dependencies.rand]
version = "0.8"
