[package]
name = "snarkvm-benchmarks"
version = "0.0.1"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Benchmarks for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = ["aleo", "cryptography", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography::cryptocurrencies", "operating-systems"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[[bench]]
name = "snark"
path = "algorithms/snark/snark.rs"
harness = false

[dependencies]
snarkvm-algorithms = { path = "../algorithms", version = "0.0.1" }
snarkvm-curves = { path = "../curves", version = "0.0.1" }
snarkvm-marlin = { path = "../marlin", version = "0.0.1" }
snarkvm-models = { path = "../models", version = "0.0.1" }
snarkvm-utilities = { path = "../utilities", version = "0.0.1" }

derivative = { version = "2" }
digest = { version = "0.7" }
rand = { version = "0.7" }
rayon = { version = "1" }
sha2 = { version = "0.9" }
smallvec = { version = "1.4" }
criterion = "0.3.3"

[dev-dependencies]
criterion = "0.3.3"
csv = { version = "1" }
rand_xorshift = { version = "0.2" }
