[package]
name = "snarkvm-benchmarks"
version = "0.0.2"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Benchmarks for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "operating-systems" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[[bench]]
name = "snark"
path = "algorithms/snark/snark.rs"
harness = false

[dependencies]
criterion = "0.3.3"

  [dependencies.snarkvm-algorithms]
  path = "../algorithms"
  version = "0.0.2"

  [dependencies.snarkvm-curves]
  path = "../curves"
  version = "0.0.2"

  [dependencies.snarkvm-marlin]
  path = "../marlin"
  version = "0.0.2"

  [dependencies.snarkvm-models]
  path = "../models"
  version = "0.0.2"

  [dependencies.snarkvm-utilities]
  path = "../utilities"
  version = "0.0.2"

  [dependencies.derivative]
  version = "2"

  [dependencies.digest]
  version = "0.7"

  [dependencies.rand]
  version = "0.7"

  [dependencies.rayon]
  version = "1"

  [dependencies.sha2]
  version = "0.9"

  [dependencies.smallvec]
  version = "1.4"

[dev-dependencies]
criterion = "0.3.3"

  [dev-dependencies.csv]
  version = "1"

  [dev-dependencies.rand_xorshift]
  version = "0.2"
