[package]
name = "snarkvm-bytecode"
version = "0.7.5"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Bytecode for a decentralized virtual machine"
license = "GPL-3.0"
edition = "2021"

[dependencies.snarkvm-circuits]
path = "../circuits"
version = "0.7.5"

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.7.5"
default-features = false

[dependencies.enum_index]
version = "0.2"

[dependencies.enum_index_derive]
version = "0.2"

[dependencies.indexmap]
version = "1.8"

[dependencies.nom]
version = "7.1"

[dependencies.once_cell]
version = "1.8.0"

[dev-dependencies.snarkvm-algorithms]
path = "../algorithms"
version = "0.7.5"
default-features = false
features = ["polycommit", "snark"]

[dev-dependencies.snarkvm-curves]
path = "../curves"
version = "0.7.5"
default-features = false
