[package]
name = "snarkvm-circuit"
version = "0.14.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Circuits for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [
  "compilers",
  "cryptography",
  "mathematics",
  "wasm",
  "web-programming"
]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "Apache-2.0"
edition = "2021"

[dependencies.snarkvm-circuit-account]
path = "./account"
version = "=0.14.0"

[dependencies.snarkvm-circuit-algorithms]
path = "./algorithms"
version = "=0.14.0"

[dependencies.snarkvm-circuit-collections]
path = "./collections"
version = "=0.14.0"

[dependencies.snarkvm-circuit-environment]
path = "./environment"
version = "=0.14.0"

[dependencies.snarkvm-circuit-network]
path = "./network"
version = "=0.14.0"

[dependencies.snarkvm-circuit-program]
path = "./program"
version = "=0.14.0"

[dependencies.snarkvm-circuit-types]
path = "./types"
version = "=0.14.0"
